    (^) `spawn´ return value is of option type
    (^) `watching´:
        (^) <evt> strongly aborts <body> (instead of weak abortion)
        (^) accepts assignment (`watching <v> in <evt>´)
        (^) expects value (instead of pointer to value)
    (^) `emit´, `kill´, `spawn´ count as yielding statements (besides `await´)
    (^) pass by reference also for pools
    (^) new "two-pass" scheduler implementation
    (-) pointers in internal events
    (-) pool iterators cannot yield

* v0.9 (apr'15, but never publicly released)
    (+) option types (`?´ suffix for types)
    (+) `native/pre´ blocks
    (+) native blocks per class
    (+) `global´ blocks
    (+) experimental: compile option `--safety <LEVEL>´
    (+) experimental: static-only algebraic data types
    (+) experimental: time machine
    (^) interfacing with C and finalization systems rewritten
    (^) bounded pools also for interfaces
    (^) `ceu_sys_go´: the event parameter is now a pointer to its type
    (^) `async thread´ renamed to `async/thread´
    (-) `?´ in identifiers (due to option types)
    (-) `[]´ buffer pointers (in favor of references and option types)
    (-) `new´ and `free´ primitives (in favor of `spawn´ with automatic management)

* v0.8 (jun'14)
    (+) manual
    (+) `pool´ for organisms
    (+) `watching´ for organisms and events
    (+) `outer´ accessor inside constructors
    (+) `loop/N´ for bounded tight loops
    (+) `_´ as an anonymous identifier
    (+) `&´ references
    (+) `[]´ plain pointers
    (+) `plain´ type annotation
    (+) experimental: embedded Lua source
    (+) experimental: `do T with ... end;´
    (^) `@´ prefix for all annotations
    (^) `in´ token for loops (instead of `,´ and `=´)
    (-) `free´ for organisms

* v0.7 (apr'14)
    (+) new primitive types: bool, char, uint, word, float, f32, f64
    (+) `true´, `false´ constants
    (+) functions and class methods
    (^) `return´ statement has been replaced by `escape´